--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <li><a href="baitap01.html">Bài 1 - Carousel</a></li>
   <li><a href="baitap02.html">Bài 2 - Todo List</a></li>
   <li><a href="baitap03.html">Bài 3 - Game đoán số</a></li>
-  <li><a href="baitap20.docx">Kết quả Bài 20</a></li>
+  <li><a href="baitap20.html">Kết quả Bài 20</a></li>
   <li><a href="baitap21/index.html">Giải Bài 21</a></li>
 </ul>
 
 </body>
 </html>
+
